--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,6 +4,7 @@ $color-primary-light: #7ed56f;
 $color-grey-dark: #777;
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
+$color-grey-dark-2: #999;
 
 $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
