--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     text-decoration: none;
@@ -9,6 +10,10 @@
     transition: all 0.2s ease-in-out;
     position: relative;
     font-size: $default-font-size;
+
+    //change <button> border
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -20,7 +25,8 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
     transform: translateY(-1px);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
