--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -30,3 +30,31 @@
   padding: 15rem 0;
   position: relative;
 }
+
+.section-booking {
+  padding: 15rem 0;
+  background-image: linear-gradient(
+    to right bottom,
+    $color-primary-light,
+    $color-primary-dark
+  );
+}
+
+.book {
+  background-image: linear-gradient(
+      105deg,
+      rgba($color-white, 0.9) 0%,
+      rgba($color-white, 0.9) 50%,
+      transparent 50%
+    ),
+    url(../img/nat-10.jpg);
+  background-size: 100%;
+  height: 50rem;
+  border-radius: 3px;
+  box-shadow: rgba($color-black, 0.15);
+
+  &__form {
+    width: 50%;
+    padding: 6rem;
+  }
+}
