--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -12,3 +12,61 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+//Media query manager
+
+/*  
+
+0-600px phone
+600-900 tablet portrait
+900-1200 tablet landscape
+1200-1800 normal styles that we have written
+1800+ big desktop
+
+*/
+// @mixin respond-phone {
+//   @media (max-width: 600px) {
+//     @content;
+//   }
+// }
+
+/*
+break point 
+
+phone
+tab-port
+tab-land
+big-desktop
+
+1em =16px
+
+steps:
+base + typography
+general layout + grid
+page layout 
+components
+
+
+*/
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media (max-width: 37.5em) {
+      @content;
+    }
+  }
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em) {
+      @content;
+    }
+  }
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em) {
+      @content;
+    }
+  }
+  @if $breakpoint == big-desktop {
+    @media (min-width: 112.5em) {
+      @content;
+    }
+  }
+}
