--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -1,22 +1,31 @@
-.feature-box{
+.feature-box {
   text-align: center;
-  background-color: rgba($color-white,.8);
+  background-color: rgba($color-white, 0.8);
   font-size: 1.5rem;
   padding: 2.5rem;
   border-radius: 3px;
-  box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
-  transition: all .3s;
-  &__icon{
+  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+  transition: all 0.3s;
+
+  @include respond(tab-port) {
+    padding: 2rem;
+  }
+  &__icon {
     font-size: 6rem;
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
     display: inline-block;
-    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    background-image: linear-gradient(
+      to right,
+      $color-primary-light,
+      $color-primary-dark
+    );
     background-clip: text;
     color: transparent;
-
+    @include respond(tab-port) {
+      margin-bottom: 0;
+    }
   }
-  &:hover{
+  &:hover {
     transform: translateY(-1.5rem) scale(1.03);
   }
- 
 }
