--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -11,6 +11,10 @@
     width: 90%;
     display: block;
     transition: all 0.3s;
+
+    @include respond(tab-port) {
+      width: 100%;
+    }
     &:focus {
       outline: none;
       box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
@@ -46,6 +50,11 @@
   &__radio-group {
     width: 40%;
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+      margin-bottom: 2rem;
+    }
   }
 
   &__radio-label {
