--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,9 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0;
   margin-top: -25vh;
+  @include respond(tab-port) {
+    padding: 20rem 0;
+  }
 }
 
 .section-feature {
@@ -19,18 +22,28 @@
   & > * {
     transform: skewY(7deg);
   }
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .section-tours {
   padding: 25rem 0 15rem 0;
   background-color: $color-grey-light-1;
   margin-top: -10rem;
+
+  @include respond(tab-port) {
+    padding: 20rem 0 10rem 0;
+  }
 }
 .section-stories {
   padding: 15rem 0;
   position: relative;
-}
 
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
+}
 .section-booking {
   padding: 15rem 0;
   background-image: linear-gradient(
@@ -38,6 +51,10 @@
     $color-primary-light,
     $color-primary-dark
   );
+
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .book {
@@ -49,12 +66,38 @@
     ),
     url(../img/nat-10.jpg);
   background-size: 100%;
-  height: 50rem;
   border-radius: 3px;
   box-shadow: rgba($color-black, 0.15);
+
+  @include respond(tab-land) {
+    background-image: linear-gradient(
+        105deg,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 65%,
+        transparent 65%
+      ),
+      url(../img/nat-10.jpg);
+    background-size: cover;
+  }
+
+  @include respond(tab-port) {
+    background-image: linear-gradient(
+        to right,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 100%
+      ),
+      url(../img/nat-10.jpg);
+  }
 
   &__form {
     width: 50%;
     padding: 6rem;
+    @include respond(tab-land) {
+      width: 65%;
+    }
+
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
 }
