--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -10,6 +10,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     border-radius: 3px;
     overflow: hidden;
@@ -186,27 +187,28 @@
         clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
       }
     }
-  }
-  &:hover &__side--front {
-    transform: rotateY(0);
-  }
-  &__details {
-    padding: 1rem 3rem;
-  }
-  &__cta {
-    position: relative;
-    top: 0;
-    left: 0;
-    transform: translate(0);
-    width: 100%;
-    padding: 7rem 4rem 4rem 4rem;
-  }
 
-  &__price-box {
-    margin-bottom: 3rem;
-  }
+    &:hover &__side--front {
+      transform: rotateY(0);
+    }
+    &__details {
+      padding: 1rem 3rem;
+    }
+    &__cta {
+      position: relative;
+      top: 0;
+      left: 0;
+      transform: translate(0);
+      width: 100%;
+      padding: 7rem 4rem 4rem 4rem;
+    }
 
-  &__price-value {
-    font-size: 4rem;
+    &__price-box {
+      margin-bottom: 3rem;
+    }
+
+    &__price-value {
+      font-size: 4rem;
+    }
   }
 }
